infra/k8s-dev/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: anime.dev
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: tetsudoeki-auth-srv
              servicePort: 3000
          - path: /api/discover/?(.*)
            backend:
              serviceName: tetsudoeki-discover-srv
              servicePort: 3000
          - path: /(.*)
            backend:
              serviceName: tetsudoeki-client-srv
              servicePort: 3000
